@@ -3,13 +3,16 @@ package com.capstone.collaborationhelper.service;
 import com.capstone.collaborationhelper.dto.CanvasDtos;
 import com.capstone.collaborationhelper.entity.*;
 import com.capstone.collaborationhelper.repository.*;
+import com.capstone.collaborationhelper.websocket.CrdtWebSocketHandler.ForceReloadEvent;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
 import java.time.ZonedDateTime;
 import java.util.List;
 import java.util.Map;
@@ -19,18 +22,18 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class CanvasService {
+
     private final ProjectRepository projectRepository;
     private final BlockRepository blockRepository;
     private final EdgeRepository edgeRepository;
     private final ProjectVersionRepository versionRepository;
     private final ObjectMapper objectMapper;
-
-    // [보안 및 정리를 위한 Repository 추가]
     private final UserRepository userRepository;
     private final PartyRepository partyRepository;
     private final ProjectCrdtLogRepository crdtLogRepository;
 
-    // [Read] 라이브(현재 작업 중인) 상태 불러오기
+    private final ApplicationEventPublisher eventPublisher; // 직접 의존성 대신 이벤트 발행기 사용
+
     @Transactional(readOnly = true)
     public CanvasDtos.SyncRes loadLiveCanvas(Integer projectId) {
         assertPartyMember(projectId);
@@ -39,38 +42,31 @@ public class CanvasService {
         return new CanvasDtos.SyncRes(mapBlocksToDto(blocks), mapEdgesToDto(edges));
     }
 
-    // [Read] 과거의 특정 박제 버전 불러오기
     @Transactional(readOnly = true)
     public CanvasDtos.SyncRes loadVersionCanvas(Integer projectId, Integer versionNumber) {
         assertPartyMember(projectId);
         ProjectVersion version = versionRepository.findByProjectIdAndVersionNumber(projectId, versionNumber)
                 .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 버전입니다."));
-
         try {
             return objectMapper.readValue(version.getCrdtSnapshot(), CanvasDtos.SyncRes.class);
         } catch (Exception e) {
-            throw new RuntimeException("버전 데이터를 읽는 중 오류가 발생했습니다.", e);
+            throw new RuntimeException("스냅샷 파싱 실패", e);
         }
     }
 
-    // [Update] 라이브 스냅샷 동기화
+    // [STEP 2] 자동 스냅샷 병합 및 DB 청소
     @Transactional
     public void syncLiveCanvas(Integer projectId, CanvasDtos.SyncReq req) {
-        // 1. 동기화를 시작하는 현재 시간을 기록합니다. (데이터 증발 방지용)
-        ZonedDateTime syncStartTime = ZonedDateTime.now();
-
-        Project project = projectRepository.findById(projectId)
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 프로젝트입니다."));
-
+        LocalDateTime syncStartTime = LocalDateTime.now();
+        Project project = projectRepository.findById(projectId).orElseThrow();
         assertNotGuest(projectId);
 
         project.setUpdatedAt(ZonedDateTime.now());
         projectRepository.save(project);
 
-        // 1. Block UPSERT 및 논리적 삭제
+        // Block UPSERT
         List<Block> existingBlocks = blockRepository.findByProjectId(projectId);
-        Map<String, Block> blockMap = existingBlocks.stream()
-                .collect(Collectors.toMap(Block::getFrontendId, b -> b));
+        Map<String, Block> blockMap = existingBlocks.stream().collect(Collectors.toMap(Block::getFrontendId, b -> b));
 
         if (req.getBlocks() != null) {
             for (CanvasDtos.BlockDto dto : req.getBlocks()) {
@@ -79,23 +75,16 @@ public class CanvasService {
                     block = Block.builder().project(project).frontendId(dto.getFrontendId()).build();
                 }
                 applyBlockDto(block, dto);
-
                 blockRepository.save(block);
                 blockMap.remove(dto.getFrontendId());
             }
         }
-
-        // 최적화: N+1 삭제 쿼리 방지를 위해 saveAll() 벌크 처리
-        List<Block> blocksToDelete = blockMap.values().stream()
-                .filter(b -> !b.isDeleted())
-                .peek(b -> b.setDeleted(true))
-                .collect(Collectors.toList());
+        List<Block> blocksToDelete = blockMap.values().stream().filter(b -> !b.isDeleted()).peek(b -> b.setDeleted(true)).toList();
         blockRepository.saveAll(blocksToDelete);
 
-        // 2. Edge UPSERT 및 논리적 삭제 처리
+        // Edge UPSERT
         List<Edge> existingEdges = edgeRepository.findByProjectId(projectId);
-        Map<String, Edge> edgeMap = existingEdges.stream()
-                .collect(Collectors.toMap(Edge::getFrontendId, e -> e));
+        Map<String, Edge> edgeMap = existingEdges.stream().collect(Collectors.toMap(Edge::getFrontendId, e -> e));
 
         if (req.getEdges() != null) {
             for (CanvasDtos.EdgeDto dto : req.getEdges()) {
@@ -104,29 +93,21 @@ public class CanvasService {
                     edge = Edge.builder().project(project).frontendId(dto.getFrontendId()).build();
                 }
                 applyEdgeDto(edge, dto);
-
                 edgeRepository.save(edge);
                 edgeMap.remove(dto.getFrontendId());
             }
         }
-
-        // 최적화: Edge 역시 saveAll() 벌크 처리로 수정
-        List<Edge> edgesToDelete = edgeMap.values().stream()
-                .filter(e -> !e.isDeleted())
-                .peek(e -> e.setDeleted(true))
-                .collect(Collectors.toList());
+        List<Edge> edgesToDelete = edgeMap.values().stream().filter(e -> !e.isDeleted()).peek(e -> e.setDeleted(true)).toList();
         edgeRepository.saveAll(edgesToDelete);
 
-        // 2. 최종 정리: 무조건 다 지우지 말고, 아까 기록해둔 시간 '이전'의 로그만 지워서 찰나의 유실을 막습니다.
+        // 안전한 찌꺼기 청소: 동기화 시점 이전의 CRDT 로그 날리기
         crdtLogRepository.deleteByProjectIdAndCreatedAtBefore(projectId, syncStartTime);
     }
 
-    // [Create] 통일된 버전 박제 (Commit)
+    // [STEP 3] 영구 버전 박제 (Commit)
     @Transactional
     public Integer commitVersion(Integer projectId, String commitMessage) {
-        Project project = projectRepository.findById(projectId)
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 프로젝트입니다."));
-
+        Project project = projectRepository.findById(projectId).orElseThrow();
         assertNotGuest(projectId);
 
         CanvasDtos.SyncRes currentState = loadLiveCanvas(projectId);
@@ -146,125 +127,103 @@ public class CanvasService {
                 .commitMessage(commitMessage)
                 .crdtSnapshot(snapshotBytes)
                 .build();
-
         versionRepository.save(newVersion);
-        log.info("▶ [CanvasService] 프로젝트(ID: {})의 새로운 버전(v{})이 저장되었습니다.", projectId, nextVersion);
+
         return nextVersion;
     }
 
-    // 버전 히스토리 리스트 반환
+    // [STEP 4] 방장의 라이브 복원 (Restore)
+    @Transactional
+    public void restoreVersion(Integer projectId, Integer versionNumber) {
+        assertOwner(projectId); // 방장만 복원 가능
+
+        // 1. 과거 버전의 스냅샷 가져오기
+        CanvasDtos.SyncRes snapshot = loadVersionCanvas(projectId, versionNumber);
+
+        // 2. 과거 스냅샷 데이터를 Live 도화지에 덮어쓰기 (SyncReq로 변환 후 Sync 진행)
+        CanvasDtos.SyncReq restoreReq = new CanvasDtos.SyncReq();
+        restoreReq.setBlocks(snapshot.getBlocks());
+        restoreReq.setEdges(snapshot.getEdges());
+
+        syncLiveCanvas(projectId, restoreReq);
+        log.info("[Restore] 프로젝트 {}의 라이브 화면이 버전 {} 상태로 덮어씌워졌습니다.", projectId, versionNumber);
+
+        // 직접 참조 대신 이벤트 발행
+        eventPublisher.publishEvent(new ForceReloadEvent(projectId));
+    }
+
     @Transactional(readOnly = true)
     public List<CanvasDtos.VersionDto> getVersionHistory(Integer projectId) {
         assertPartyMember(projectId);
         return versionRepository.findByProjectIdOrderByVersionNumberDesc(projectId).stream()
-                .map(v -> new CanvasDtos.VersionDto(v.getVersionNumber(), v.getCommitMessage(), v.getCreatedAt().toString()))
-                .collect(Collectors.toList());
+                .map(v -> new CanvasDtos.VersionDto(v.getVersionNumber(), v.getCommitMessage(), v.getCreatedAt().toString())).toList();
     }
 
-    // 특정 과거 버전 삭제
     @Transactional
     public void deleteSpecificVersion(Integer projectId, Integer versionNumber) {
         assertOwner(projectId);
-
-        versionRepository.findByProjectIdAndVersionNumber(projectId, versionNumber)
-                .ifPresent(versionRepository::delete);
-        log.info("▶ [CanvasService] 프로젝트(ID: {})의 버전(v{})이 삭제되었습니다.", projectId, versionNumber);
+        versionRepository.findByProjectIdAndVersionNumber(projectId, versionNumber).ifPresent(versionRepository::delete);
     }
 
     // ===============================================
-    // 권한 체크 및 헬퍼 메서드 모음
+    // 내부 유틸리티
     // ===============================================
-
     private User currentUser() {
         String username = (String) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-        return userRepository.findByUsername(username)
-                .orElseThrow(() -> new RuntimeException("로그인 사용자를 찾을 수 없습니다."));
+        return userRepository.findByUsername(username).orElseThrow();
     }
 
     private Party getMyPartyInfo(Integer projectId) {
-        User me = currentUser();
-        return partyRepository.findByProjectIdAndUserId(projectId, me.getId())
-                .orElseThrow(() -> new RuntimeException("이 프로젝트에 접근할 권한이 없습니다."));
+        return partyRepository.findByProjectIdAndUserId(projectId, currentUser().getId()).orElseThrow();
     }
 
-    private void assertPartyMember(Integer projectId) {
-        getMyPartyInfo(projectId);
-    }
+    private void assertPartyMember(Integer projectId) { getMyPartyInfo(projectId); }
 
     private void assertNotGuest(Integer projectId) {
-        Party myParty = getMyPartyInfo(projectId);
-        if ("GUEST".equals(myParty.getRole())) {
-            throw new RuntimeException("읽기 전용(GUEST) 권한은 다이어그램을 덮어쓰거나 버전을 저장할 수 없습니다.");
-        }
+        if ("GUEST".equals(getMyPartyInfo(projectId).getRole())) throw new RuntimeException("GUEST는 편집 불가");
     }
 
     private void assertOwner(Integer projectId) {
-        Party myParty = getMyPartyInfo(projectId);
-        if (!"OWNER".equals(myParty.getRole())) {
-            throw new RuntimeException("프로젝트 소유자(OWNER)만 이 작업을 수행할 수 있습니다.");
-        }
+        if (!"OWNER".equals(getMyPartyInfo(projectId).getRole())) throw new RuntimeException("방장만 가능");
     }
 
-    // Block / Edge DTO ↔ Entity 매핑
+    // Entity -> DTO, DTO -> Entity 매핑 로직
     private CanvasDtos.BlockDto mapBlockToDto(Block block) {
         CanvasDtos.BlockDto dto = new CanvasDtos.BlockDto();
-        dto.setFrontendId(block.getFrontendId());
-        dto.setParentFrontendId(block.getParentFrontendId());
-        dto.setType(block.getType());
-        dto.setName(block.getName());
-        dto.setDescription(block.getDescription());
-        dto.setParameters(block.getParameters());
-        dto.setReturnType(block.getReturnType());
-        dto.setAnnotations(block.getAnnotations());
-        dto.setPosX(block.getPosX());
-        dto.setPosY(block.getPosY());
-        dto.setWidth(block.getWidth());
-        dto.setHeight(block.getHeight());
+        dto.setFrontendId(block.getFrontendId()); dto.setParentFrontendId(block.getParentFrontendId());
+        dto.setType(block.getType()); dto.setName(block.getName());
+        dto.setDescription(block.getDescription()); dto.setParameters(block.getParameters());
+        dto.setReturnType(block.getReturnType()); dto.setAnnotations(block.getAnnotations());
+        dto.setPosX(block.getPosX()); dto.setPosY(block.getPosY());
+        dto.setWidth(block.getWidth()); dto.setHeight(block.getHeight());
         return dto;
     }
 
     private CanvasDtos.EdgeDto mapEdgeToDto(Edge edge) {
         CanvasDtos.EdgeDto dto = new CanvasDtos.EdgeDto();
-        dto.setFrontendId(edge.getFrontendId());
-        dto.setSourceFrontendId(edge.getSourceFrontendId());
-        dto.setTargetFrontendId(edge.getTargetFrontendId());
-        dto.setSourceHandle(edge.getSourceHandle());
-        dto.setTargetHandle(edge.getTargetHandle());
-        dto.setType(edge.getType());
+        dto.setFrontendId(edge.getFrontendId()); dto.setSourceFrontendId(edge.getSourceFrontendId());
+        dto.setTargetFrontendId(edge.getTargetFrontendId()); dto.setSourceHandle(edge.getSourceHandle());
+        dto.setTargetHandle(edge.getTargetHandle()); dto.setType(edge.getType());
         dto.setBadgeCount(edge.getBadgeCount());
         return dto;
     }
 
     private void applyBlockDto(Block block, CanvasDtos.BlockDto dto) {
-        block.setDeleted(false);
-        block.setParentFrontendId(dto.getParentFrontendId());
-        block.setType(dto.getType());
-        block.setName(dto.getName());
-        block.setDescription(dto.getDescription());
-        block.setParameters(dto.getParameters());
-        block.setReturnType(dto.getReturnType());
-        block.setAnnotations(dto.getAnnotations());
-        block.setPosX(dto.getPosX());
-        block.setPosY(dto.getPosY());
-        block.setWidth(dto.getWidth());
-        block.setHeight(dto.getHeight());
+        block.setDeleted(false); block.setParentFrontendId(dto.getParentFrontendId());
+        block.setType(dto.getType()); block.setName(dto.getName());
+        block.setDescription(dto.getDescription()); block.setParameters(dto.getParameters());
+        block.setReturnType(dto.getReturnType()); block.setAnnotations(dto.getAnnotations());
+        block.setPosX(dto.getPosX()); block.setPosY(dto.getPosY());
+        block.setWidth(dto.getWidth()); block.setHeight(dto.getHeight());
     }
 
     private void applyEdgeDto(Edge edge, CanvasDtos.EdgeDto dto) {
-        edge.setDeleted(false);
-        edge.setSourceFrontendId(dto.getSourceFrontendId());
-        edge.setTargetFrontendId(dto.getTargetFrontendId());
-        edge.setSourceHandle(dto.getSourceHandle());
-        edge.setTargetHandle(dto.getTargetHandle());
-        edge.setType(dto.getType());
+        edge.setDeleted(false); edge.setSourceFrontendId(dto.getSourceFrontendId());
+        edge.setTargetFrontendId(dto.getTargetFrontendId()); edge.setSourceHandle(dto.getSourceHandle());
+        edge.setTargetHandle(dto.getTargetHandle()); edge.setType(dto.getType());
         edge.setBadgeCount(dto.getBadgeCount());
     }
 
-    private List<CanvasDtos.BlockDto> mapBlocksToDto(List<Block> blocks) {
-        return blocks.stream().map(this::mapBlockToDto).collect(Collectors.toList());
-    }
-
-    private List<CanvasDtos.EdgeDto> mapEdgesToDto(List<Edge> edges) {
-        return edges.stream().map(this::mapEdgeToDto).collect(Collectors.toList());
-    }
+    private List<CanvasDtos.BlockDto> mapBlocksToDto(List<Block> blocks) { return blocks.stream().map(this::mapBlockToDto).toList(); }
+    private List<CanvasDtos.EdgeDto> mapEdgesToDto(List<Edge> edges) { return edges.stream().map(this::mapEdgeToDto).toList(); }
 }
